--- a/resources/css/estilos.css
+++ b/resources/css/estilos.css
@@ -1,5 +1,5 @@
 .cuarto {
- background-color: #F7F7F9;
+ background-color: #41845f;
   text-align: center;
   vertical-align: bottom;
   border: 2px solid #D0D0D0;
@@ -12,10 +12,12 @@
   height: 180px;
   width: 165px;
   text-align: center;
+  color: white;
 }
 
+
 .cuarto:hover{
-   border:3px solid #6E4B5A
+   border:3px solid #FFFFFF;
 }
 
 .productoprecio{
@@ -33,6 +35,7 @@
   /*font-weight: bold;*/
   font-family: "courier", Georgia, Serif;
   text-align: left;
+  padding: 1px;
 }
 
 
